--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header></header>
-    <main>
+    <main class="apresentacao">
         <h1>
             Eleve seu negócio digital a outro nível 
             <strong class="titulo-destaque">com um Front-end de qualidade!
@@ -19,8 +19,8 @@
             CSS. Ajudo pequenos negócios e designers a 
             colocarem em prática boas ideias. Vamos 
             conversar?</p>
-            <a href="https://instagram.com/rafaballerini">Instagram</a>
-            <a href="https://github.com/guilhermeonrails">GitHub</a>
+            <a href="https://instagram.com/spacacher">Instagram</a>
+            <a href="https://github.com/Webster-TI">GitHub</a>
             <img src="imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
