--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 CSS. Ajudo pequenos negócios e designers a 
                 colocarem em prática boas ideias. Vamos 
                 conversar?</p>
-                <a href="https://instagram.com/spacacher">Instagram</a>
-                <a href="https://github.com/Webster-TI">GitHub</a>
+                <div class="apresentacao__links">
+                    <a href="https://instagram.com/spacacher">Instagram</a>
+                    <a href="https://github.com/Webster-TI">GitHub</a>
+                </div>
         </section>
             <img src="imagem.png" alt="Foto da Joana Santos programando">
     </main>
