--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header></header>
     <main class="apresentacao">
-        <section class="apresentacao__conteudo"->
+        <section class="apresentacao__conteudo">
             <h1 class="=apresentacao__conteudo__titulo">
                 Eleve seu negócio digital a outro nível 
                 <strong class="titulo-destaque">com um Front-end de qualidade!
@@ -21,8 +21,8 @@
                 colocarem em prática boas ideias. Vamos 
                 conversar?</p>
                 <div class="apresentacao__links">
-                    <a href="https://instagram.com/spacacher">Instagram</a>
-                    <a href="https://github.com/Webster-TI">GitHub</a>
+                    <a class="apresentacao__links__link" href="https://instagram.com/spacacher">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/Webster-TI">GitHub</a>
                 </div>
         </section>
             <img src="imagem.png" alt="Foto da Joana Santos programando">
