--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 colocarem em prática boas ideias. Vamos 
                 conversar?</p>
                 <div class="apresentacao__links">
-                    <h2>Acesse minhas redes:</h2>
+                    <h2 class="apresentacao__links_subtitulo">Acesse minhas redes:</h2>
                     <a class="apresentacao__links__link" href="https://instagram.com/spacacher">Instagram</a>
                     <a class="apresentacao__links__link" href="https://github.com/Webster-TI">GitHub</a>
                 </div>
