--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="=apresentacao__conteudo__titulo">
-                Eleve seu negócio digital a outro nível 
-                <strong class="titulo-destaque">com um Front-end de qualidade!
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong
+                    class="titulo-destaque"> com um Front-end de qualidade!
                 </strong></h1>
-                <p class="apresentacao__conteudo_paragrafo">Olá! Sou Joana Santos, desenvolvedora 
-                Front-end com especialidade em React, HTML e
-                CSS. Ajudo pequenos negócios e designers a 
-                colocarem em prática boas ideias. Vamos 
-                conversar?</p>
-                <div class="apresentacao__links">
-                    <h2 class="apresentacao__links_subtitulo">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__link" href="https://instagram.com/spacacher">Instagram</a>
-                    <a class="apresentacao__links__link" href="https://github.com/Webster-TI">GitHub</a>
-                </div>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Webster Spacacheri, apaixonado por tecnologia e estou
+                sempre em busca de novos aprendizados! Integrante do programa ONE Oracle Next Education em parceria com
+                a Alura, estou aprendendo HTML, CSS e JavaScript, criando sites e aplicações incríveis, unindo
+                criatividade e lógica. Com uma formação prática e conectada ao mercado, desenvolvo tanto habilidades
+                técnicas quanto comportamentais, preparando-me com confiança para um futuro promissor na área de
+                tecnologia.</p>
+            <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+                <a class="apresentacao__links__link" href="https://github.com/Webster-Ti">
+                    <img src="./assets/github.png" alt="Logo do Github">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://linkedin.com/in/webster-spacacheri">
+                    <img src="./assets/linkedin.png" alt="Logo do Linkedin">
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://instagram.com/spacacher">
+                    <img src="./assets/instagram.png" alt="Logo do Instagram">
+                    Instagram
+                </a>
+            </div>
         </section>
-            <img src="imagem.png" alt="Foto da Joana Santos programando">
+        <div class="image-container">
+            <img src="./assets/Webster.jpg" alt="Foto do Webster Spacacheri" class="styled-image">
+            <div class="overlay">
+                <svg class="sparkle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2L13.09 8.26H19.82L14.36 12.13L15.45 18.39L12 14.77L8.55 18.39L9.64 12.13L4.18 8.26H10.91L12 2Z" fill="#00C4CC"/>
+                </svg>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
+
 </html>
