Atualiza classes de imagem e links de navegação no about.html e index.html; ajusta largura da seção de apresentação no style.css para melhor responsividade.

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
                 tecnologia.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link" href="https://github.com/Webster-Ti">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Webster-Ti">
                     <img src="./assets/github.png" alt="Logo do Github">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/webster-spacacheri">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/webster-spacacheri">
                     <img src="./assets/linkedin.png" alt="Logo do Linkedin">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://instagram.com/spacacher">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/spacacher">
                     <img src="./assets/instagram.png" alt="Logo do Instagram">
                     Instagram
                 </a>
             </div>
         </section>
         <div class="image-container">
-            <img src="./assets/Webster.jpg" alt="Foto do Webster Spacacheri" class="styled-image">
+            <img class="apresentacao__imagem" src="./assets/Webster.jpg" alt="Foto do Webster Spacacheri" class="styled-image">
             <div class="overlay">
                 <svg class="sparkle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 2L13.09 8.26H19.82L14.36 12.13L15.45 18.39L12 14.77L8.55 18.39L9.64 12.13L4.18 8.26H10.91L12 2Z" fill="#00C4CC"/>
