Alteração do tamanho da imagem e estilização no CSS.

--- a/about.html
+++ b/about.html
@@ -20,14 +20,11 @@
             <p class="apresentacao__conteudo__texto">Sou Webster Spacacheri, um entusiasta da tecnologia que está sempre em busca de novos aprendizados e desafios. Atualmente, faço parte do programa ONE Oracle Next Education em parceria com a Alura, onde estou aprimorando minhas habilidades em HTML, CSS e JavaScript. Minha jornada na programação tem sido guiada pela união entre criatividade e lógica, permitindo-me criar sites e aplicações inovadoras que atendem às demandas do mundo digital.</p>
             <p class="apresentacao__conteudo__texto">Além do conhecimento técnico, estou desenvolvendo habilidades comportamentais essenciais para o mercado de tecnologia, como trabalho em equipe, resolução de problemas e pensamento crítico. A formação prática e alinhada às tendências do setor me dá a confiança necessária para construir um futuro promissor na área, sempre focado na evolução e na criação de soluções impactantes.</p>
         </section>
+
         <div class="image-container">
-            <img class="apresentacao__imagem" src="./assets/Webster.jpg" alt="Foto do Webster Spacacheri" class="styled-image">
-            <div class="overlay">
-                <svg class="sparkle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2L13.09 8.26H19.82L14.36 12.13L15.45 18.39L12 14.77L8.55 18.39L9.64 12.13L4.18 8.26H10.91L12 2Z" fill="#00C4CC"/>
-                </svg>
-            </div>
+            <img class="styled-image" src="./assets/Webster.jpg" alt="Foto Webster Spacacheri">
         </div>
+        
     </main>
 
     <footer class="rodape">
