--- a/index.html
+++ b/index.html
@@ -42,14 +42,11 @@
                 </a>
             </div>
         </section>
+
         <div class="image-container">
-            <img class="apresentacao__imagem" src="./assets/Webster.jpg" alt="Foto do Webster Spacacheri" class="styled-image">
-            <div class="overlay">
-                <svg class="sparkle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2L13.09 8.26H19.82L14.36 12.13L15.45 18.39L12 14.77L8.55 18.39L9.64 12.13L4.18 8.26H10.91L12 2Z" fill="#00C4CC"/>
-                </svg>
-            </div>
-        </div>
+            <img class="styled-image" src="./assets/Webster.jpg" alt="Foto Webster Spacacheri">
+        </div>        
+
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Webster Spacacheri</p>
