Corrigido bugs de tamanho de imagem, textos fora de padrão e otimização do código final.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
@@ -17,18 +20,17 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Sou Webster Spacacheri, um entusiasta da tecnologia que está sempre em busca de novos aprendizados e desafios. Atualmente, faço parte do programa ONE Oracle Next Education em parceria com a Alura, onde estou aprimorando minhas habilidades em HTML, CSS e JavaScript. Minha jornada na programação tem sido guiada pela união entre criatividade e lógica, permitindo-me criar sites e aplicações inovadoras que atendem às demandas do mundo digital.</p>
-            <p class="apresentacao__conteudo__texto">Além do conhecimento técnico, estou desenvolvendo habilidades comportamentais essenciais para o mercado de tecnologia, como trabalho em equipe, resolução de problemas e pensamento crítico. A formação prática e alinhada às tendências do setor me dá a confiança necessária para construir um futuro promissor na área, sempre focado na evolução e na criação de soluções impactantes.</p>
+            <p class="apresentacao__conteudo__texto">Sou Webster Spacacheri, um entusiasta da tecnologia que está sempre em busca de novos aprendizados e desafios. Atualmente, faço parte do programa ONE Oracle Next Education em parceria com a Alura, onde estou aprimorando minhas habilidades em HTML, CSS e JavaScript. Minha jornada na programação tem sido guiada pela união entre criatividade e lógica, permitindo-me criar sites e aplicações inovadoras que atendem às demandas do mundo digital.
+            </p>
+            <p class="apresentacao__conteudo__texto">
+            Além do conhecimento técnico, estou desenvolvendo habilidades comportamentais essenciais para o mercado de tecnologia, comotrabalho em equipe, resolução de problemas e pensamento crítico. A formação prática e alinhada às tendências do setor me dáa confiança necessária para construir um futuro promissor na área, sempre focado na evolução e na criação de soluçõesimpactantes.</p>
         </section>
-
-        <div class="image-container">
-            <img class="styled-image" src="./assets/Webster.jpg" alt="Foto Webster Spacacheri">
-        </div>
-        
+        <img class="apresentacao__imagem" src="./assets/Webster.jpg" alt="Foto Webster">
     </main>
 
     <footer class="rodape">
         <p>Desenvolvido por Webster Spacacheri</p>
     </footer>
 </body>
+
 </html>
