--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
@@ -17,39 +18,34 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong
-                    class="titulo-destaque"> com um Front-end de qualidade!
-                </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Webster Spacacheri, apaixonado por tecnologia e estou
-                sempre em busca de novos aprendizados! Integrante do programa ONE Oracle Next Education em parceria com
-                a Alura, estou aprendendo HTML, CSS e JavaScript, criando sites e aplicações incríveis, unindo
-                criatividade e lógica. Com uma formação prática e conectada ao mercado, desenvolvo tanto habilidades
-                técnicas quanto comportamentais, preparando-me com confiança para um futuro promissor na área de
-                tecnologia.</p>
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
+            class="titulo-destaque">com um Front-end de qualidade!
+            </strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
+            Front-end com especialidade em React, HTML e
+            CSS. Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos
+            conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/Webster-Ti">
-                    <img src="./assets/github.png" alt="Logo do Github">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Webster-TI">
+                    <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/webster-spacacheri">
-                    <img src="./assets/linkedin.png" alt="Logo do Linkedin">
-                    Linkedin
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/spacacheri">
+                    <img src="./assets/linkedin.png">
+                    linkedin
                 </a>
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/spacacher">
-                    <img src="./assets/instagram.png" alt="Logo do Instagram">
+                    <img src="./assets/instagram.png">
                     Instagram
                 </a>
             </div>
         </section>
-
-        <div class="image-container">
-            <img class="styled-image" src="./assets/Webster.jpg" alt="Foto Webster Spacacheri">
-        </div>        
-
+        <img class="apresentacao__imagem" src="./assets/Webster.jpg" alt="Foto Webster">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Webster Spacacheri</p>
+        <p>Desenvolvido por Webster Spacacheri.</p>
     </footer>
 </body>
 
